# shuttlings-cch24

./: Cargo.toml  docker-compose.yml  flake.nix
.sqlx/: query-3b7ef5200818a0235c556f6745cce37058ce783b0f269a5d65a7f8f7caa966b8.json  query-c49ca2c648ff4739bee0a110a54363d3c53e699c393ce0927c54aca5eac39e77.json
migrations/: 20241222182819_creation.up.sql
src/: lib.rs  main.rs
src/routes/: hello_bird.rs  hello_world.rs  minus_one.rs  mod.rs
src/routes/task_five/: manifest.rs  mod.rs
src/routes/task_nine/: milk.rs  milk_factory.rs  mod.rs
src/routes/task_nineteen/: cite.rs  db.rs  draft.rs  list.rs  mod.rs  remove.rs  reset.rs  undo.rs
src/routes/task_sixteen/: claims.rs  decode.rs  mod.rs  unwrap.rs  wrap.rs
src/routes/task_twelve/: error.rs  mod.rs
src/routes/task_twelve/game/: board.rs  column.rs  mod.rs  slot.rs
src/routes/task_twentythree/: lockfile.rs  mod.rs  ornament.rs  present.rs  star.rs
src/routes/task_two/: ipv4_dest.rs  ipv4_key.rs  ipv6_dest.rs  ipv6_key.rs  mod.rs
tests/minus_one/: main.rs
tests/task_five/: main.rs
tests/task_nineteen/: main.rs
tests/task_sixteen/: main.rs
tests/task_twelve/: main.rs
tests/task_twentythree/: main.rs
tests/task_two/: main.rs
