[package]
name = "itsscb-shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["query"] }
cargo-manifest = "0.17.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yml = "0.0.12"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
toml = "0.8.19"

[dev-dependencies]
axum-test = "16.4.0"
