[package]
name = "itsscb-shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["query"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
cargo-manifest = { version = "0.17.0", optional = true }
serde_yml = { version = "0.0.12", optional = true }
toml = { version = "0.8.19", optional = true }

[dev-dependencies]
axum-test = "16.4.0"

[features]
default = []
task1-9 = ["cargo-manifest", "serde_yml", "toml"]
