[package]
name = "itsscb-shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["query", "macros"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
jsonwebtoken = { version = "9.3.0", optional = true }
cargo-manifest = { version = "0.17.0", optional = true }
serde_yml = { version = "0.0.12", optional = true }
toml = { version = "0.8.19", optional = true }
rand = { version = "0.8.5", optional = true }
axum-extra = { version = "0.9.6", features = ["cookie"] }
chrono = "0.4.39"
tracing = "0.1.41"
shuttle-shared-db = { version = "0.49.0", features = [
    "postgres",
    "sqlx",
], optional = true }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1.11.0", features = ["v4"] }
tower-http = { version = "0.6.2", features = ["fs"], optional = true }
html-escape = "0.2.13"
regex = "1.11.1"
hex = "0.4.3"

[dev-dependencies]
axum-test = "16.4.0"

[features]
default = ["tower-http", "toml"]
task1-9 = ["cargo-manifest", "serde_yml", "toml"]
task12 = ["rand"]
task16 = ["jsonwebtoken"]
task19 = ["shuttle-shared-db"]
task23 = ["tower-http", "toml"]
